--- a/src/app.html
+++ b/src/app.html
@@ -16,5 +16,6 @@
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 		<script src="%sveltekit.assets%/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+		<script src="%sveltekit.assets%/js/bs5-toast.min.js" crossorigin="anonymous"></script>
 	</body>
 </html>
