--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
 		<link rel="stylesheet" href="%sveltekit.assets%/fontawesome/css/all.min.css" />
 		<!-- <link href="%sveltekit.assets%/css/styles.css" rel="stylesheet" /> -->
 		<!-- <link rel="stylesheet" href="%sveltekit.assets%/plugins/suneditor/dist/css/suneditor.min.css" /> -->
@@ -13,7 +13,7 @@
 		%sveltekit.head%
 	</head>
 
-	<body data-sveltekit-preload-data="hover">
+	<body class="bg-body-tertiary" data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 		<script src="%sveltekit.assets%/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 		<script src="%sveltekit.assets%/js/bs5-toast.min.js" crossorigin="anonymous"></script>
