--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="%sveltekit.assets%/fontawesome/css/all.min.css" />
 		<!-- <link href="%sveltekit.assets%/css/styles.css" rel="stylesheet" /> -->
 		<!-- <link rel="stylesheet" href="%sveltekit.assets%/plugins/suneditor/dist/css/suneditor.min.css" /> -->
